# Leadlag

./: .gitignore  Cargo.toml  README.md  analyze.py  analyze_decay.py  analyze_maker.py  analyze_maker_v2.py  analyze_v2.py  example.env  generate_report.py  settings.toml  test_hl.rs
.kilo/plans/: plan-fix-entry-logic.md  plan-fix-signal-quality.md  plan-l2-book-subscription.md
benches/: hot_path.rs
docs/: CHANGELOG.md  Claudefix.md  HANDOVER.md  ISSUES.md  OVERVIEW.md  README.md  architecture.md  bot_run_log.txt  environment_setup.md  futureplan.md  howto.md  livetrading.md  module_signal.md
docs/modules/: config.md  eal.md  hot_path.md  impulse_obi.md  oms.md  runners.md  sim.md  telemetry.md
src/: lib.rs  main.rs
src/config/: mod.rs  schema.rs
src/eal/: binance.rs  hyperliquid.rs  hyperliquid_exec.rs  mexc.rs  mock.rs  mod.rs  okx.rs  types.rs
src/logging/: mod.rs
src/oms/: mod.rs  preflight.rs
src/persist/: mod.rs  state.rs  telemetry.rs
src/runners/: hyperliquid.rs  live.rs  mexc.rs  mod.rs  okx.rs  paper.rs
src/signal/: correlation.rs  hysteresis.rs  impulse.rs  impulse_obi.rs  mod.rs  obi_divergence.rs  ring_buffer.rs  timegrid.rs
src/sim/: matcher.rs  mod.rs
tests/: integration_test.rs  signal_flow_test.rs
